--- a/Trabalhando_com_numeros_.ipynb
+++ b/Trabalhando_com_numeros_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNur+JAcpNsHl1RrQwhxq0G",
+      "authorship_tag": "ABX9TyPAyJGbeoJ8sEnXsNUzpadz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,16 +44,19 @@
         "print(7.2 + 2.8)\n",
         "print()\n",
         "# e se eu colocar os números entre \"aspas\"?\n",
-        "print('7' + '2') #entre aspas é uma string, então o + fará o papel de concatenação"
+        "print('7' + '2') #entre aspas é uma string, então o + fará o papel de concatenação\n",
+        "print()\n",
+        "# um exemplo de concatenação com variáveis\n",
+        "print('João' + ' Souza')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "m_jSng6yzBf5",
-        "outputId": "fb551369-e55d-470e-ab0d-fb66c0c33b91"
+        "outputId": "faf0a1c1-a94d-4bd1-fa13-08cc6a21ade8"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,7 +70,8 @@
             "\n",
             "10.0\n",
             "\n",
-            "72\n"
+            "72\n",
+            "João Souza\n"
           ]
         }
       ]
