--- a/Declarando_Variáveis.ipynb
+++ b/Declarando_Variáveis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSf98pQAGtGjHw/SBvQmc+",
+      "authorship_tag": "ABX9TyO1qu9VO3BvkOhFABIKfeoB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HkLdiEdApsJ5",
-        "outputId": "1442050b-08e5-4dab-919a-13d35a97c77f"
+        "outputId": "6c74259d-1f33-4ec5-aaae-9b9d93b42f6c"
       },
       "outputs": [
         {
@@ -52,7 +52,9 @@
             "O valor total do pedido de um Lanche e um Refrigerante é:  13.9\n",
             "--------------------------------------------------------------------------------------------------\n",
             "O valor total do pedido é:  19.8\n",
-            "--------------------------------------------------------------------------------------------------\n"
+            "-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+            "Você pediu um lanche de R$  10.9  e uma porção de Batata Frita, no valor de: R$  5.9 totalizando o valor de R$  16.8  e a forma de pagamento foi: cartão\n",
+            "------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n"
           ]
         }
       ],
@@ -105,10 +107,14 @@
         "# Podemos atribuir uma variável para a conta total do pedido?\n",
         "pedidoValorTotal = lanchePreco + batatafritaPreco + refrigerantePreco\n",
         "print('O valor total do pedido é: ', pedidoValorTotal)\n",
-        "print('--------------------------------------------------------------------------------------------------')\n",
-        "\n",
-        "\n",
-        "\n"
+        "print('-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------')\n",
+        "# ------------------------------------------------------------------------------------------------------\n",
+        "# Fazendo uma impressão composta\n",
+        "# Quanto custa pedir um lanche e uma batata? Considere a forma de pagamento pelo cartão\n",
+        "pagamentoForma = 'cartão'\n",
+        "pedidoValorTotal = lanchePreco + batatafritaPreco\n",
+        "print('Você pediu um lanche de R$ ' ,lanchePreco, ' e uma porção de Batata Frita, no valor de: R$ ',batatafritaPreco, 'totalizando o valor de R$ ',pedidoValorTotal , ' e a forma de pagamento foi:',pagamentoForma)\n",
+        "print('------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------')"
       ]
     }
   ]
