--- a/Modificando_Listas.ipynb
+++ b/Modificando_Listas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRBj8waKQBIjPRWKQEttxQ",
+      "authorship_tag": "ABX9TyN9DBcBlssAPVpHPfmlgp4O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8BOAtETD-IHj",
-        "outputId": "4f779a6b-339b-4067-e3a3-136a758c3733"
+        "outputId": "e22874ae-114c-4a71-f88a-78c32e89bde3"
       },
       "outputs": [
         {
@@ -60,6 +60,16 @@
             "Usando o comando lista_exerc.insert(1,12), inserimos o número 12 na posição 1 da lista, tendo como resultado:  [10, 12, 20, 30, 40, 50, 60]\n",
             "\u001b[42m========================== 4) Remova o número 30 =============================================================\u001b[0m\n",
             "Usando o comando lista_exerc.remove(30), remove o número 30 da lista, temos como resultado:  [10, 12, 20, 40, 50, 60]\n",
+            "\u001b[42m+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\u001b[0m\n",
+            "\n",
+            "\u001b[104m\u001b[93m+++ Trabalhando com listas de itens  +++\u001b[0m\n",
+            "\u001b[42m========================== 1) Crie uma lista com os seguintes itens: mesa,cadeira e armário =============================================================\u001b[0m\n",
+            " Utilizamos o comando lista_itens = [mesa,cadeira, armario], para criar a lista de itens:  ['mesa', 'cadeira', 'armario']\n",
+            "\u001b[42m========================== 2) Altere a cadeira por poltrona  ============================================================================================\u001b[0m\n",
+            "Usamos o comando lista_itens[1] =poltrona, para alterar o item e ficamos com o seguinte resultado:  ['mesa', 'poltrona', 'armario']\n",
+            "\u001b[42m========================== 3) Remova o item armário e apenas mostre o item removido  ====================================================================\u001b[0m\n",
+            "\u001b[42m========================== 4) Limpe toda a lista de itens  ==============================================================================================\u001b[0m\n",
+            "Utilizamos o comando lista_itens.clear() para limpar toda a lista:  []\n",
             "\u001b[42m+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\u001b[0m\n"
           ]
         }
@@ -93,7 +103,21 @@
         "print(Back.GREEN +\"========================== 4) Remova o número 30 =============================================================\"+ Style.RESET_ALL)\n",
         "lista_exerc.remove(30)\n",
         "print('Usando o comando lista_exerc.remove(30), remove o número 30 da lista, temos como resultado: ', lista_exerc)\n",
-        "print(Back.GREEN +\"+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\"+ Style.RESET_ALL)"
+        "print(Back.GREEN +\"+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\"+ Style.RESET_ALL)\n",
+        "print( )\n",
+        "print(Back.LIGHTBLUE_EX + Fore.LIGHTYELLOW_EX + '+++ Trabalhando com listas de itens  +++' + Style.RESET_ALL)\n",
+        "print(Back.GREEN +\"========================== 1) Crie uma lista com os seguintes itens: mesa,cadeira e armário =============================================================\"+ Style.RESET_ALL)\n",
+        "lista_itens = ['mesa','cadeira', 'armario']\n",
+        "print( ' Utilizamos o comando lista_itens = [mesa,cadeira, armario], para criar a lista de itens: ',lista_itens)\n",
+        "print(Back.GREEN +\"========================== 2) Altere a cadeira por poltrona  ============================================================================================\"+ Style.RESET_ALL)\n",
+        "lista_itens[1] = 'poltrona'\n",
+        "print('Usamos o comando lista_itens[1] =poltrona, para alterar o item e ficamos com o seguinte resultado: ',lista_itens)\n",
+        "print(Back.GREEN +\"========================== 3) Remova o item armário e apenas mostre o item removido  ====================================================================\"+ Style.RESET_ALL)\n",
+        "print('Item removido:', lista_itens.pop())\n",
+        "print(Back.GREEN +\"========================== 4) Limpe toda a lista de itens  ==============================================================================================\"+ Style.RESET_ALL)\n",
+        "lista_itens.clear()\n",
+        "print('Utilizamos o comando lista_itens.clear() para limpar toda a lista: ',lista_itens)\n",
+        "print(Back.GREEN +\"+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\"+ Style.RESET_ALL)\n"
       ]
     }
   ]
