--- a/Argumentos_Padrao.ipynb
+++ b/Argumentos_Padrao.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+wmeZuyCZc+DrOIihA4fX",
+      "authorship_tag": "ABX9TyOww/XC5MS+Ue5Hx4Xfn8+a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,6 +122,9 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\" A variável a está declarada fora da função, sendo uma variável global,lida em qualquerlugar do código.\n",
+        "A variável b é declarada dentro da função, logo só funciona enquanto estiver dentro da função, sendo uma veriável local.\n",
+        "\"\"\"\n",
         "a = 10 #variável global\n",
         "def funcao():\n",
         "    a = 5 #variável local\n",
@@ -147,6 +150,38 @@
           "text": [
             "5 8\n",
             "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Contador\n",
+        "def incrementar(c):\n",
+        "  contador = c\n",
+        "  contador =+ 1\n",
+        "  print (\"Valor de contador dentro da função\", contador)\n",
+        "\n",
+        "contador = 0\n",
+        "incrementar(contador)\n",
+        "print(\"Valor de contador fora da função\", contador)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gazi_tkLP1iM",
+        "outputId": "24949204-c5a7-4cae-d0b7-c59c18eb144e"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Valor de contador dentro da função 1\n",
+            "Valor de contador fora da função 0\n"
           ]
         }
       ]
